k8s/face-md.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-sub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-sub
  template:
    metadata:
      labels:
        app: face-sub
    spec:
      containers:
        - name: face-sub
          image: faceapi2/face-md:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "face-data-sub.py"]
          volumeMounts:
            - name: face-sub-data
              mountPath: /app/data
            - name: face-sub-logs
              mountPath: /app/logs
      volumes:
        - name: face-sub-data
          persistentVolumeClaim:
            claimName: face-sub-data
        - name: face-sub-logs
          persistentVolumeClaim:
            claimName: face-sub-logs
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: face-pub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: face-pub
  template:
    metadata:
      labels:
        app: face-pub
    spec:
      containers:
        - name: face-pub
          image: faceapi2/face-md:latest
          imagePullPolicy: IfNotPresent
          command: ["python", "face-data-pub.py"]
          volumeMounts:
            - name: face-pub-counters
              mountPath: /app/counters
            - name: face-pub-logs
              mountPath: /app/logs
      volumes:
        - name: face-pub-counters
          persistentVolumeClaim:
            claimName: face-pub-counters
        - name: face-pub-logs
          persistentVolumeClaim:
            claimName: face-pub-logs
